--- a/personal_assistant/app_assistant/templates/app_assistant/index.html
+++ b/personal_assistant/app_assistant/templates/app_assistant/index.html
@@ -2,21 +2,18 @@
 
 {% block content %}
 
-<div class="container">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">SignIn</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">SignUp</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-  
+<div class="px-4 py-5 my-5 text-center">
+    <img class="d-block mx-auto mb-4" src="cont1.jpg" alt="" width="750" height="978">
+    <h1 class="display-5 fw-bold">Personal Assistant</h1>
+    <h2 class="display-5 fw-bold">Персональний помічник</h2>
+    <div class="col-lg-6 mx-auto">
+        <p class="lead mb-4">A new generation of assistant</p>
+<!--        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">-->
+<!--            <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Primary button</button>-->
+<!--            <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>-->
+<!--        </div>-->
+    </div>
 </div>
+
 {% endblock %}
+
