--- a/personal_assistant/app_assistant/templates/app_assistant/index.html
+++ b/personal_assistant/app_assistant/templates/app_assistant/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="px-4 py-5 my-5 text-center">
-    <img class="d-block mx-auto mb-4" src="cont1.jpg" alt="" width="750" height="978">
+    <img class="d-block mx-auto mb-4" src="static/app_assistant/cont1.jpg" alt="" width="750" height="978">
     <h1 class="display-5 fw-bold">Personal Assistant</h1>
     <h2 class="display-5 fw-bold">Персональний помічник</h2>
     <div class="col-lg-6 mx-auto">
