--- a/personal_assistant/app_assistant/templates/app_assistant/base.html
+++ b/personal_assistant/app_assistant/templates/app_assistant/base.html
@@ -23,7 +23,7 @@
                         <a class="nav-link" href="#">Contacts</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Notes</a>
+                        <a class="nav-link" href="{% url 'app_notes:main' %}">Notes</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Files</a>
