--- a/personal_assistant/app_contacts/templates/app_contacts/edit_contact.html
+++ b/personal_assistant/app_contacts/templates/app_contacts/edit_contact.html
@@ -1,13 +1,44 @@
-
 {% extends "app_assistant/base.html" %}
 
 {% block content %}
-  <h2>Edit Contact</h2>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Save changes</button>
-  </form>
-  <br>
-  <a href="{% url 'app_contacts:edit_contact' pk=contact.pk %}">Cancel</a>
-{% endblock %} 
+
+<h1>Редактировать контакт - {{ contact.fullname }}</h1>
+
+<form method="post">
+  {% csrf_token %}
+
+  <div class="form-group">
+    <label for="fullname">Имя и фамилия:</label>
+    <input type="text" id="fullname" name="fullname" value="{{ contact.fullname }}" class="form-control" required>
+  </div>
+
+  <div class="form-group">
+    <label for="address">Адрес:</label>
+    <input type="text" id="address" name="address" value="{{ contact.address }}" class="form-control">
+  </div>
+
+  <div class="form-group">
+    <label for="birthday">Дата рождения:</label>
+    <input type="date" id="birthday" name="birthday" value="{{ birthday_str.birthday_str }}" class="form-control">
+  </div>
+
+  <div class="form-group">
+    <label for="phone_numbers">Номера телефонов:</label>
+    {% for phone_number in contact.phone_numbers.all %}
+      <input type="text" name="phone_numbers" value="{{ phone_number.phone_number }}" class="form-control mb-2">
+    {% endfor %}
+    <a href="{% url 'app_contacts:add_phone_number' pk=contact.pk %}" class="btn btn-primary">Добавить номер телефона</a>
+  </div>
+
+  <div class="form-group">
+    <label for="email_addresses">Email адреса:</label>
+    {% for email_address in contact.email_addresses.all %}
+      <input type="email" name="email_addresses" value="{{ email_address.email }}" class="form-control mb-2">
+    {% endfor %}
+    <a href="{% url 'app_contacts:add_email_address' pk=contact.pk %}" class="btn btn-primary">Добавить email адрес</a>
+  </div>
+
+  <button type="submit" class="btn btn-primary">Сохранить</button>
+</form>
+
+{% endblock %}
