--- a/personal_assistant/app_assistant/templates/app_assistant/base.html
+++ b/personal_assistant/app_assistant/templates/app_assistant/base.html
@@ -26,7 +26,7 @@
                         <a class="nav-link" href="#">Notes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Files</a>
+                       <a class="nav-link" href="{% url 'app_storage:main' %}">Files</a>
                     </li>
 
                     <li class="nav-item">
