--- a/personal_assistant/app_storage/templates/app_storage/base.html
+++ b/personal_assistant/app_storage/templates/app_storage/base.html
@@ -18,19 +18,17 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/">Home</a>
                     </li>
-                    {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contacts</a>
+                       <a class="nav-link" href="{% url 'app_storage:upload' %}">Upload</a>
+                    </li>
+                     <li class="nav-item">
+                       <a class="nav-link" href="{% url 'app_storage:dropbox' %}">Dropbox</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Notes</a>
-                    </li>
-                    <li class="nav-item">
-                       <a class="nav-link" href="{% url 'app_storage:upload' %}">Files</a>
+                        <a class="nav-link" href="{% url 'app_storage:pictures' %}">Pictures</a>
                     </li>
 
-                    {% endif %}
-                </ul>
+                  </ul>
             </div>
         </div>
     </nav>
