--- a/personal_assistant/app_storage/templates/app_storage/dropbox.html
+++ b/personal_assistant/app_storage/templates/app_storage/dropbox.html
@@ -1,17 +1,10 @@
 {% extends "app_storage/base.html" %}
 
 {% block content %}
-<h1>Upload file</h1>
-<form action="{% url 'app_storage:upload' %}" method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    <div class="mb-3">
-        <label class="form-label">Description</label>
-        {{form.description}}
-    </div>
-    <div class="mb-3">
-        <label class="form-label">Picture</label>
-        {{form.path}}
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+ <h2>Upload a File</h2>
+    <form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Upload</button>
+    </form>
 {% endblock %}
