--- a/personal_assistant/app_storage/templates/app_storage/picture.html
+++ b/personal_assistant/app_storage/templates/app_storage/picture.html
@@ -1,10 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "app_storage/base.html" %}
+
+{% block content %}
+<h1>Your pictures</h1>
+<div class="row">
+    {% for pic in pictures %}
+    <div class="col-md-4">
+        <div class="card" style="width: 18rem;">
+            <img src="{{media}}{{pic.path}}" class="card-img-top" alt="pic">
+            <div class="card-body">
+                <p class="card-text">{{pic.description}}</p>
+                <a href="{% url 'app_instagram:edit' pic.id %}" class="btn btn-info">Edit</a>
+                <a href="{% url 'app_instagram:remove' pic.id %}" class="btn btn-danger">Delete</a>
+            </div>
+        </div>
+    </div>
+
+    {% endfor %}
+
+</div>
+{% endblock %}
