--- a/personal_assistant/app_storage/templates/app_storage/upload.html
+++ b/personal_assistant/app_storage/templates/app_storage/upload.html
@@ -1,8 +1,8 @@
-{% extends "app_instagram/base.html" %}
+{% extends "app_storage/base.html" %}
 
 {% block content %}
 <h1>Upload file</h1>
-<form action="{% url 'app_instagram:upload' %}" method="post" enctype="multipart/form-data">
+<form action="{% url 'app_storage:upload' %}" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <div class="mb-3">
         <label class="form-label">Description</label>
