--- a/personal_assistant/app_assistant/templates/app_assistant/base.html
+++ b/personal_assistant/app_assistant/templates/app_assistant/base.html
@@ -30,7 +30,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'users:my_logout' %}">Logout</a>
+                        <a class="nav-link" href="{% url 'users:logout' %}">Logout</a>
 
                     </li>
                     {% else %}
