--- a/personal_assistant/users/templates/users/signout.html
+++ b/personal_assistant/users/templates/users/signout.html
@@ -1,5 +1,10 @@
 {% extends "app_assistant/base.html" %}
 
 {% block content %}
-<h1> Повертайтеся скоріше, з нами цікаво! </h1>
+<br>
+<h3>Logged out: {{username}} </h3>
+<br>
+<div class="alert alert-info" role="alert">
+    Have you logged-out already? It's so sadly.
+</div>
 {% endblock %}
