--- a/personal_assistant/app_storage/templates/app_storage/index.html
+++ b/personal_assistant/app_storage/templates/app_storage/index.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<div class="px-4 py-5 my-5 text-center">
+<div class="px-4 py-2 text-center">
     <img class="d-block mx-auto mb-4" src="{% static 'app_storage/cp-file-manager.png' %}" alt="" width="764" height="414">
     <h1 class="display-5 fw-bold">File manager</h1>
     <div class="col-lg-6 mx-auto">
