added dasboard.html(main page contacts), fix html

--- a/personal_assistant/app_contacts/templates/app_contacts/add_email_address.html
+++ b/personal_assistant/app_contacts/templates/app_contacts/add_email_address.html
@@ -8,7 +8,7 @@
   <form method="post" action="{{ email_adress_add_url }}">
     {% csrf_token %}
     {{ email_address_form.as_p }}
-    <button type="submit">Add Email Address</button>
+    <button type="submit" class="btn btn-primary">Add Email Address</button>
   </form>
 
 {% endblock %}
