--- a/personal_assistant/app_notes/templates/app_notes/search_note.html
+++ b/personal_assistant/app_notes/templates/app_notes/search_note.html
@@ -5,8 +5,15 @@
 {% endblock %}
 {% load static %}
 {% block content %}
-    <link rel="stylesheet" type="text/css" href="{% static 'app_notes/css/styles.css' %}">  <h1>Search Notes</h1>
-  <!-- Search Form -->
+  <link rel="stylesheet" type="text/css" href="{% static 'app_notes/css/styles.css' %}">  <h1>Search Notes</h1>
+  <div class="h-screen py-6">
+        <nav class="mb-5 border-b-4">
+            <ul class="flex items-center justify-center gap-3 mb-10">
+                <li><a class="text-black px-5 py-2 border-2 border-lip rounded-lg bg-gradient-to-r from-indigo-600 to-indigo-400 hover:bg-gradient-to-l hover:from-indigo-600 hover:to-indigo-400 transition" href="/app_notes/" role="button"> Go back to the main page </a></li>
+            </ul>
+        </nav>
+
+<!-- Search Form -->
   <form method="get">
     <label for="q">Search:</label>
     <input type="text" id="q" name="q">
