Applied logo-main with corrected size.

--- a/personal_assistant/app_assistant/templates/app_assistant/base.html
+++ b/personal_assistant/app_assistant/templates/app_assistant/base.html
@@ -23,10 +23,10 @@
 
   <div class="sidebar d-flex flex-column flex-shrink-0 p-3 text-bg-custom" style="width: 280px;">
     <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-      <svg class="bi pe-none me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
+      <svg class="bi pe-none me-2" width="32" height="32"><use xlink:href="#bootstrap"/></svg>
 
       <img src="{% static 'app_assistant/logo-main.svg' %}" width="40" height="40" >
-      <span class="fs-4">Sidebar</span>
+      <span class="fs-4">Group-6</span>
     </a>
     <hr>
     <ul class="nav nav-pills flex-column">
