--- a/personal_assistant/app_assistant/templates/app_assistant/base.html
+++ b/personal_assistant/app_assistant/templates/app_assistant/base.html
@@ -26,7 +26,7 @@
       <svg class="bi pe-none me-2" width="10" height="32"><use xlink:href="#bootstrap"/></svg>
 
       <img src="{% static 'app_assistant/logo-main.svg' %}" width="60" height="60" >
-      <span class="fs-4">Group-6</span>
+      <span class="fs-4">PyThonic</span>
     </a>
     <hr>
     <ul class="nav nav-pills flex-column">
