Added green middle-point

--- a/personal_assistant/app_assistant/templates/app_assistant/base.html
+++ b/personal_assistant/app_assistant/templates/app_assistant/base.html
@@ -80,7 +80,11 @@
     <div class="dropdown">
       <a href="#" class="d-flex align-items-center text-white text-decoration-none" data-bs-toggle="dropdown" aria-expanded="false">
         <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
-        <strong>Username</strong>
+        {% if user.is_authenticated %}
+           <strong>Username </strong><span style="color: #00c000"> &#9679;</span>
+        {% else %}
+           <strong>Username </strong>
+        {% endif %}
       </a>
     </div>
   </div>
