--- a/personal_assistant/app_assistant/templates/app_assistant/index.html
+++ b/personal_assistant/app_assistant/templates/app_assistant/index.html
@@ -12,7 +12,7 @@
 <!--            <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>-->
 <!--        </div>-->
     </div>
-    <img class="d-block mx-auto mb-4" src="static/app_assistant/cont1.jpg" alt="" width="750" height="978">
+    <img class="d-block mx-auto mb-4" src="static/app_assistant/virtual_assistant@2x.webp" alt="" width="945" height="473">
 </div>
 
 {% endblock %}
